cmake_minimum_required(VERSION 3.10)
project(TD04)
file(GLOB MY_SOURCES CONFIGURE_DEPENDS src/*)
foreach(fichier ${MY_SOURCES})
    get_filename_component(td4 ${fichier} NAME_WE)
    message("Nom du fichier sans extension = ${td4}")
    add_executable(${td4} ${fichier})
    target_compile_features(${td4} PRIVATE cxx_std_17)
endforeach()